--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "no-unused-vars": "off"
   },
   "settings": {
     "import/resolver": {
